# NRAPS

./: .gitignore  Cargo.toml  CodeIdeas.txt  LICENSE  README.md  SampleInputFile.txt  TestCaseA.txt  TestCaseB.txt  TestCaseC.txt  doc_plot.py  interface.csv  k_eff.csv  plot.py  vars.csv
nraps/: Cargo.toml  SampleInputFile.txt
nraps/src/: main.rs
src/: discrete.rs  main.rs  mc_code.rs  plot_solution.rs  process_input.rs  rand.rs
