[package]
name = "nraps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "*"
rand = "*"
float-cmp = "*"
csv = "*"
nalgebra = "*"

[profile.dev]
codegen-units = 4      # allows for maximum threads to be used in compilation. minimum optimization
incremental = true      # allows information to be saved locally to improve recomp times
lto = false             # Some linker optimization, but not many
opt-level = 0           # no optimization to maximize debuginfo

[profile.release]
codegen-units = 1       # number of threads on compilation. 1 allows for maximum optimization
incremental = false     # prevents information to be saved locally to improve recomp times
lto = true              # Causes extended linking time at the expense of compile time
opt-level = 3           # experiment with 2 or 3 (2 or 3 for file size optimization)
strip = "debuginfo"     # removes all debug info from binary (maybe should do "true" instead)